--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -6,20 +6,127 @@ output:
 ---
 
 
+```{r,echo=FALSE, warning=FALSE}
+options(xtable.comment = FALSE)
+library("knitr")
+library("formatR")
+opts_chunk$set(message=F,comment="",tidy=T,warning=FALSE,highlight=TRUE)
+
+```
+
+
+
 ## Loading and preprocessing the data
+
+```{r}
+data = read.csv("activity/activity.csv")
+str(data)
+```
 
 
 
 ## What is mean total number of steps taken per day?
 
+1.Calculate the total number of steps taken per day
+
+```{r}
+attach(data)
+s = tapply(steps, date, function(x){sum(x,na.rm = T)})
+s
+```
+
+2.Make a histogram of the total number of steps taken each day
+
+```{r}
+hist(s)
+```
+
+3.Calculate and report the mean and median of the total number of steps taken per day
+
+```{r}
+mean(s)
+median(s)
+```
 
 
 ## What is the average daily activity pattern?
 
+1.Make a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+```{r}
+m = tapply(steps, interval, function(x){mean(x,na.rm = T)})
+plot(names(m),m, type = "l")
+```
+
+2.Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r}
+m[which.max(m)]
+```
+
+We can see the interval of 835 contains the maximum number of steps which is 206.2.
 
 
 ## Imputing missing values
 
+1.Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 
+```{r}
+sum(!complete.cases(data))
+```
+
+2.Devise a strategy for filling in all of the missing values in the dataset. 
+
+```{r}
+index = !complete.cases(data)#find the index of rows which contains missing values.
+new_data = data
+new_data$steps[index] = m[as.character(interval[index])]#use the mean for that 5-minute interval to fill the missing values.
+
+```
+
+3.Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r}
+head(new_data)#show a part of the new dataset
+sum(!complete.cases(new_data))#check if there are still missing values
+```
+
+4.Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day
+
+```{r}
+new_s = with(tapply(steps, date, sum), data = new_data)
+hist(new_s)
+mean(new_s)
+median(new_s)
+```
+
+These values obviously differ from the estimates from the first part of the assignment. 
+
+The impact of imputing missing data on the estimates of the total daily number of steps is that the result looks more reasonable and the distrubition of histogram looks normal. 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+1.Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+```{r}
+new_data$date = as.Date(new_data$date)
+head(weekdays(new_data$date))
+
+new_data$week = ifelse( weekdays(new_data$date) %in% c("星期六","星期日"), 
+        print("weekend"),
+        print("weekday") )
+
+```
+
+
+2.Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+
+```{r}
+library(lattice)
+new_m = with(aggregate(steps, list(interval, week), mean), data = new_data)
+names(new_m) = c("interval", "week", "steps")
+with(xyplot(steps ~ interval | week, layout = c(1, 2), type = "l"), data = new_m) 
+
+```
+
+
